--- a/frontend/index.less
+++ b/frontend/index.less
@@ -2,4 +2,4 @@
 @font-path: '/assets/fonts/';
 
 // Import LVM LAS Assets
-@import "npm://lvm-las-assets/src/styles/main.less";
+@import "npm://lvm-las-assets/index.less";
